[gd_scene load_steps=9 format=3 uid="uid://g6t5l535p38d"]

[ext_resource type="Script" path="res://Modules/Enemys/Bat/Bat.gd" id="1_jkpbk"]
[ext_resource type="Texture2D" uid="uid://ddp4av4mqnwc3" path="res://Assets/Images/Bat/Bat.png" id="2_h63cq"]
[ext_resource type="Script" path="res://Modules/Scripts/Weapon.gd" id="3_58w4c"]

[sub_resource type="Animation" id="Animation_37lle"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_loqlp"]
resource_name = "fly"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6kep"]
_data = {
"RESET": SubResource("Animation_37lle"),
"fly": SubResource("Animation_loqlp")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0wq7b"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uqhga"]
radius = 2.0

[node name="Bat" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(-8, -16)
collision_layer = 2
script = ExtResource("1_jkpbk")
agression_rate = 2
life_points = 5
knock_back = 1
knock_resist = 3
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_h63cq")
hframes = 2

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource("3_58w4c")
damage = 4
force = 100

[node name="FlyTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fly"
libraries = {
"": SubResource("AnimationLibrary_c6kep")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_0wq7b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_uqhga")

[connection signal="timeout" from="FlyTimer" to="." method="_on_fly_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
